deployments/applications/infisical/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical
  namespace: applications
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    app: infisical
  ports:
    - name: http
      port: 80
      targetPort: 80
