deployments/applications/infisical/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical
  namespace: applications
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - infisical
      secretName: infisical-tls-cert
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infisical
                port:
                  name: http
